<resources>
    <string name="app_name">Black Out</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    
    <string name="signup_error_message">Please make sure you enter a username, password, and
    email address!</string>
    <string name="signup_error_title">Oops!</string>

    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    
    <string name="menu_edit_friends_label">Edit Friends</string>
    
    <string name="error_title">We\'re sorry!</string>
    
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="signup_text">Don\'t have an account? Sign up! </string>
    <string name="title_activity_sign_up_">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button">SIGN UP</string>
    <string name="cancel_button">CANCEL</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_settings">Settings</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">Selected video must be 10 seconds or less</string>

    <string name="error_opening_file">There was a problem with selected file.</string>

    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipents_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_file">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Black Out</string>
    <string name="content_desc_background">Black Out Background Image</string>
    <string name="subtitle">Now you see it, now you don\'t!</string>
    <string name="push_message">You have a new message from %s!</string>

</resources>
